--- a/class08-materials/layout1/index.html
+++ b/class08-materials/layout1/index.html
@@ -2,18 +2,61 @@
 <html lang="en">
 	<head>
   	<meta charset="utf-8">
-  	<meta name="description" content="Your description goes here">
+  	<meta name="Auther" content="ShubhamPrakash">
   	<meta name="keywords" content="one, two, three">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Blank Template</title>
+		<title> Khan Academy  </title>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		<!-- <link rel="stylesheet" href="./css/normalize.css"> -->
+		<link rel="stylesheet" href="./css/style.css">
 	</head>
 	<body>
 
-		<script type="text/javascript" src="js/main.js"></script>
+		<nav class="navbar">
+			<section class="left-nav">
+				<select name="Courses" id="droplist">
+					<option value="null">Courses</option>
+					<option value="1">kuch b</option>
+				</select>
+	
+				<input type="text" placeholder="Search"/>
+
+			</section>
+		
+
+			<img class="nav-logo" src="./src/khanLogo.jpg" alt="brand-logo">
+
+			<section class="right-nav">
+			<ul>
+				<li><a href="#">Donate</a> </li>
+				<li> <a href="#">Login</a></li>
+				<li><a href="#">Sign up</a></li>
+			</ul>
+			</section>
+
+		</nav>
+
+		<main class="header-main">
+			<section class="left-main">
+				<img id="bigimg" src="./src/bigPic.jpg" alt="students">
+			</section>
+
+			<section class="right-main">
+				<h1 class="header-title">For every student, every classroom.
+				<br/>	Real results.
+				</h1>
+				<p class="para">We're nonprofit with the mission to provide a free, world-class education for anyone, anywhere.</p>
+				<!-- <p>Learner, teachers, and parents:</p> -->
+				<button class="btn">Learners</button>
+				<button class="btn">Teachers</button>
+				<button class="btn">Parents</button>
+			</section>
+		</main>
+		
+
+
+
 	</body>
 </html>
