--- a/class08-materials/layout2/index.html
+++ b/class08-materials/layout2/index.html
@@ -50,7 +50,7 @@
 
     </nav>
 
-	<!---------------------------------------------------------------- main content ----------------------------------------------------------------->
+	<!---------------------------------------------------- main content ----------------------------------------------------------------->
     <main>
       <div class="top-page">
         	<div class="top-header">
@@ -58,7 +58,7 @@
         		<span>Thrusday, 13 Augest</span>
         	</div>
 
-        	<article background-image="/israel-arab-pic.png">
+        	<article class="big-article">
         	  <a href="#">
         	  <span>Isreal and UAE strike historic peace deal</span>
         	  <p>isreal and the UAE to normalise relation, making the third
@@ -100,7 +100,9 @@
       		</div>
         
    	 </div >
-      
+      <!---------------------------------------------------------------- bottom page ---------------------------------------------------------------------------------------->
+
+
     	<div class="bottom-page">
         	<div class="header">
         		<h3>NEWS</h3>
