--- a/class10-materials/pushwork-Wireframe/index.html
+++ b/class10-materials/pushwork-Wireframe/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Shubham Prakash">
     <title></title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -75,12 +76,12 @@
 
 
       <aside class="companies pad">
-        <img src="https://i.imgur.com/9DPA2Cg.png" class="airBnb companyLogo">
-        <img src="https://i.imgur.com/0cQOsgn.png" class="shopify companyLogo">
-        <img src="https://i.imgur.com/JC5GerV.png" class="salesforce companyLogo">
-        <img src="https://i.imgur.com/DJRr7A2.png" class="twitter companyLogo">
-        <img src="https://i.imgur.com/nEEWdV2.png" class="netflix companyLogo">
-        <img src="https://i.imgur.com/peVFcTG.png" class="dropbox companyLogo">
+        <img src="./src/airbnb-logo.png" class="airBnb companyLogo">
+        <img src="./src/shopify-logo.png" class="shopify companyLogo">
+        <img src="./src/salesforce-logo.png" class="salesforce companyLogo">
+        <img src="./src/twitter-logo.png" class="twitter companyLogo">
+        <img src="./src/netflix-logo.png" class="netflix companyLogo">
+        <img src="./src/dropbox-logo.png" class="dropbox companyLogo">
       </aside>
 
 
@@ -158,7 +159,7 @@
 
     <section class="sectionThird  pad">
       <section class="emptyImage">
-            <img src="https://i.imgur.com/p6Vegk2.png" class="placeholder image">
+            <img src="./src/img-here.png" class="placeholder image">
       </section>
       <section class="mainText">
         <h3>
@@ -192,7 +193,7 @@
 
     <section class="sectionFourth pad">
       <section class="emptyImage">
-         <img src="https://i.imgur.com/p6Vegk2.png" class="placeholder image">
+         <img src="/src/img-here.png" class="placeholder image">
       </section>
       <section class="mainText">
         <h3>
@@ -310,7 +311,7 @@
 
       <section class="sectionFive pad">
         <section class="emptyImage">
-              <img src="https://i.imgur.com/p6Vegk2.png" class="placeholder">
+              <img src="./src/img-here.png" class="placeholder">
         </section>
         <section class="mainText">
           <h3>
@@ -443,9 +444,5 @@
         </section>
       </footer>
 
-
-
-
-    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
   </body>
 </html>
