played with js bg-changer

--- a/class12-materials/background-picker/index.html
+++ b/class12-materials/background-picker/index.html
@@ -17,9 +17,11 @@
 
 		<h2>Remote</h2>
 		<ul>
+			<li id="dark"></li>
 			<li id="purple"></li>
 			<li id="green"></li>
 			<li id="blue"></li>
+			
 		</ul>
 
 		<script type="text/javascript" src="js/main.js"></script>
