--- a/class14-materials/javaScriptInfo_Tasks/index.html
+++ b/class14-materials/javaScriptInfo_Tasks/index.html
@@ -7,11 +7,25 @@
     <meta name="Author" content="SHubham prakash" />
     <title>javaScriptInfo - Tasks</title>
 
+    <style>
+        *{
+            box-sizing: border-box;
+        }
+        h1{
+            padding: 30%  30%;
+            text-align: center;
+        }
+    </style>
+
 </head>
 <body>
     
-
-
+<Section class="task-one">
+    <h1 id="t1"></h1>
+</Section>
+<Section class="task-two">
+    <h1 id="t2"></h1>
+</Section>
 
     <script src="script.js"></script>
 </body>
