--- a/class14-materials/javaScriptInfo_Tasks/index.html
+++ b/class14-materials/javaScriptInfo_Tasks/index.html
@@ -11,8 +11,12 @@
         *{
             box-sizing: border-box;
         }
+        .box{
+            border: 2px solid cyan;
+            margin: 1em;
+        }
         h1{
-            padding: 30%  30%;
+            padding: 10%  10%;
             text-align: center;
         }
     </style>
@@ -20,11 +24,14 @@
 </head>
 <body>
     
-<Section class="task-one">
+<Section class="task-one box">
     <h1 id="t1"></h1>
 </Section>
-<Section class="task-two">
+<Section class="task-two box">
     <h1 id="t2"></h1>
+</Section>
+<Section class="task-three box">
+    <h1 id="t3"></h1>
 </Section>
 
     <script src="script.js"></script>
